# BBTracker

./: .env.example  .env.prod.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  conftest.py  entrypoint.prod.sh  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_is_coach.py
backend/apps/accounts/tests/: test_admin.py  (+2 more)
backend/apps/analysis/: admin.py  models.py  serializers.py  services.py  stats.py  timeseries.py  urls.py  views.py
backend/apps/coaching/: access.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: admin.py  enums.py  export.py  models.py  report.py  serializers.py  services.py  urls.py  views.py  viewsets.py
backend/apps/diary/: admin.py  enums.py  images.py  models.py  serializers.py  services.py  storage.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/nutrition/: admin.py  apps.py  enums.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/protocols/: admin.py  apps.py  bloodwork_pdf.py  enums.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/training/: admin.py  apps.py  enums.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  prod.py
(+198 files in other folders)
